RESOLVED FIXED28175
HTML 5 database and LocalStorage is not persistent on the Symbian port of QtWebKit
https://bugs.webkit.org/show_bug.cgi?id=28175
Summary HTML 5 database and LocalStorage is not persistent on the Symbian port of QtW...
Laszlo Gombos
Reported 2009-08-11 06:21:18 PDT
The path separators in the path that is being passed to sqlite is not the native OS path; instead it is always the "/" - the Qt universal directory separator. Most OS (even Windows I think) understands the "/" separator - but not Symbian. The problem could be solved by calling QDir::toNativeSeparators() before the path is passed to the OS. The problem and the possible solution was brought to my attention by David Leong.
Attachments
proposed patch. (1.23 KB, patch)
2009-08-11 06:27 PDT, Laszlo Gombos
no flags
Laszlo Gombos
Comment 1 2009-08-11 06:27:44 PDT
Created attachment 34553 [details] proposed patch. WebCore::pathByAppendingComponent() seems to be a good place to call QDir::toNativeSeparators before the path is passed to the OS. All the path construction to sqlite DBs are going trough this function.
Eric Seidel (no email)
Comment 2 2009-08-11 22:32:21 PDT
Comment on attachment 34553 [details] proposed patch. Seems OK. I'm not sure this is the right place for this change. But i'm not sure I have a better suggestion.
Eric Seidel (no email)
Comment 3 2009-08-12 09:42:05 PDT
Comment on attachment 34553 [details] proposed patch. Clearing flags on attachment: 34553 Committing to http://svn.webkit.org/repository/webkit/trunk ... M WebCore/ChangeLog M WebCore/platform/qt/FileSystemQt.cpp Committed r47114 M WebCore/ChangeLog M WebCore/platform/qt/FileSystemQt.cpp r47114 = 7f2ff9356922227e477417a6efb09c9d854e485e (trunk) No changes between current HEAD and refs/remotes/trunk Resetting to the latest refs/remotes/trunk http://trac.webkit.org/changeset/47114
Eric Seidel (no email)
Comment 4 2009-08-12 09:42:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.