2009-08-12  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by Eric Seidel.

        HTML 5 database and LocalStorage is not persistent on the Symbian port of QtWebKit
        https://bugs.webkit.org/show_bug.cgi?id=28175

        Call QDir::toNativeSeparators() before the path is passed to the OS.

        Based on work by David Leong.

        * platform/qt/FileSystemQt.cpp:
        (WebCore::pathByAppendingComponent):

Canonical link: https://commits.webkit.org/38715@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47114 268f45cc-cd09-0410-ab3c-d52691b4dbfc